<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ipt="http://schemas.android.com/apk/res/com.imax.ipt"
    android:id="@+id/layout_vp_indicator"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="17dp"
    android:orientation="vertical" >

    <com.imax.ipt.ui.widget.viewpager.ViewPagerIndicator
        android:id="@+id/id_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:orientation="horizontal"
        ipt:item_count="6" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titles_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/genres_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/actors_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/directors_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/years_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/favorites_nav"
            android:textColor="#CCFFFFFF"
            android:textSize="16sp" />

    </com.imax.ipt.ui.widget.viewpager.ViewPagerIndicator>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_vp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/global_overlay_color"
        android:layout_weight="1">

    </android.support.v4.view.ViewPager>

</LinearLayout>