<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ipt_gui_asset_bg" >

    <ImageView
        android:id="@+id/imgPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="155dp"
        android:layout_y="118dp"
        android:src="@drawable/ipt_gui_asset_poster_default_large" />

    <FrameLayout
        android:id="@+id/masterMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="399dp"
        android:layout_y="118dp"
        android:animateLayoutChanges="true"
        android:columnCount="2" >

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="424dp"
            android:layout_y="155dp"
            android:text="@string/title"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="532dp"
            android:layout_height="wrap_content"
            android:layout_x="513dp"
            android:layout_y="155dp"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:textColor="@android:color/white" >
        </EditText>

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtRating"
            android:layout_width="532dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:textColor="@android:color/white" />

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/years"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtYears"
            android:layout_width="532dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:textColor="@android:color/white" />

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtSypnosis"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white" />

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtGenres"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white" />

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directors"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtDirectors"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="6"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white" />

        <com.imax.ipt.ui.layout.IPTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actors"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtActors"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="7"
            android:background="@drawable/edit_text_holo_dark"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white" />
    </GridLayout>

</AbsoluteLayout>