<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/ipt_gui_asset_bg">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="173dp"
			android:layout_centerHorizontal="true"
			android:visibility="visible"
			android:src="@drawable/imax_small"
			/>

	<ImageButton
			android:id="@+id/btn_turn_on"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="9dp"
			android:layout_centerInParent="true"
			android:src="@drawable/global_power_btn"
			android:background="@android:color/transparent"
			android:contentDescription="@string/content_btn_on_off"/>
	<LinearLayout
			android:id="@+id/layout_lighting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="610dp"
			android:divider="@drawable/diver_line_small"
			android:showDividers="middle"
			android:gravity="center"
			>

		<Button
				android:id="@+id/btn_lights_on"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:background="@drawable/selector_lighting_poweron"
				android:text="@string/lighting_power_on"
				android:textColor="@color/gray_light"
				android:textSize="18sp"

				/>

		<Button
				android:id="@+id/btn_lights_off"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/selector_lighting_poweron"
				android:text="@string/lighting_power_off"
				android:textColor="@color/gray_light"
				android:textSize="18sp"

				/>
	</LinearLayout>


	<FrameLayout
			android:id="@+id/layout_shadow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			>
		<ImageView
				android:id="@+id/welcome_shadow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_alignParentBottom="true"
				android:layout_marginBottom="130dp"
				android:visibility="visible"
				android:src="@drawable/welcome_shadow"
				/>
	</FrameLayout>


	<FrameLayout
			android:id="@+id/statusNotificationLayout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true">
	</FrameLayout>

</RelativeLayout>